--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <h1>Free Pick-up and Drop Laundry Service</h1>
                         <h2>We provide laundry service in Bloomington, Indiana area. Schedule your free pick-up and drop now.</h2>
                         <div class="text-center text-lg-start">
-                            <a href="https://calendly.com/pickndroplaundrybloomington/" target="blank" class="btn-get-started scrollto">Get Started</a>
+                            <a href="https://calendly.com/pickndroplaundrybloomington/" target="blank" class="btn-get-started scrollto">Book Now</a>
                         </div>
                     </div>
                 </div>
