--- a/index.html
+++ b/index.html
@@ -841,12 +841,12 @@
     <div id="preloader"></div>
 
     <!-- Calendly badge widget begin -->    
-    <script type="text/javascript">
-        window.onload = function () {
-            Calendly.initBadgeWidget({
-                url: 'https://calendly.com/gulshan-patil/30min', text: 'Book your appointment', color: '#0069ff', textColor: '#ffffff', branding: true }); 
-            }
-    </script>
+    <!-- <script type="text/javascript"> -->
+        <!-- window.onload = function () { -->
+            <!-- Calendly.initBadgeWidget({ -->
+                <!-- url: 'https://calendly.com/gulshan-patil/30min', text: 'Book your appointment', color: '#0069ff', textColor: '#ffffff', branding: true });  -->
+            <!-- } -->
+    <!-- </script> -->
     <!-- Calendly badge widget end -->
 
     <!-- Vendor JS Files -->
