--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="300">
-                    <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+                    <a href="https://calendly.com/pickndroplaundrybloomington/" target="blank"><img src="assets/img/hero-img.png" class="img-fluid animated" alt=""></a>
                 </div>
             </div>
         </div>
