--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
                             <div class="icon"><i class="bx bx-book-reader"></i></div>
                             <h4 class="title"><a href="">Choose your preferences</a></h4>
-                            <p class="description">At the time, mention your preferences of washing (fabric softener etc.) and schedule a delivery time. Our price is $1.99/lb with a $20.00 minimum. Check our pricing area for more details.</p>
+                            <p class="description">At the time, mention your preferences of washing (fabric softener etc.) and schedule a delivery time. Our price is <b>$1.99/lb with a $20.00 minimum</b>. Check our pricing area for more details.</p>
                         </div>
 
                         <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
