--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
                     <div class="col-lg-3 col-md-4">
                         <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
                             <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                            <h3><a href="">Residential Laundry</a></h3>
+                            <h3><a href="javascript:;">Residential Laundry<div class="sub-head">Pick and drop laundry service includes washing, drying, folding and delivery.</div></a></h3>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                         <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
                             <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-                            <h3><a href="">Commercial Laundry</a></h3>
+                            <h3><a href="javascript:;">Commercial Laundry<div class="sub-head">Applies only to AirBnB and Hotel Laundry. Including washing, drying, folding, pick up and deliveries of bed sheets, pillow cases, towels and other laundry used by the guests.</div></a></h3>
                         </div>
                     </div>
                 </div>
