--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container d-flex align-items-center justify-content-between">
 
             <div class="logo">
-                <h1><a href="index.html"><span>Pickn'Drop<br>Laundry Services (t)</span></a></h1>
+                <h1><a href="index.html"><span>Pickn'Drop<br>Laundry Services (©)</span></a></h1>
                 <!-- Uncomment below if you prefer to use an image logo -->
                 <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
             </div>
@@ -163,7 +163,7 @@
 
                 <div class="section-title" data-aos="fade-up">
                     <h2>Services </h2>
-                    <p>Check Our Services </p>
+                    <p>Our Services </p>
                 </div>
 
                 <div class="row" data-aos="fade-left">
