--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="container">
 
                 <div class="section-title" data-aos="fade-up">
-                    <h2>Team</h2>
+                    <!-- <h2>Team</h2> -->
                     <p>Our Great Team</p>
                 </div>
 
@@ -272,7 +272,7 @@
             <div class="container">
 
                 <div class="section-title" data-aos="fade-up">
-                    <h2>F.A.Q</h2>
+                    <!-- <h2>F.A.Q</h2> -->
                     <p>Frequently Asked Questions</p>
                 </div>
 
@@ -333,7 +333,7 @@
             <div class="container">
 
                 <div class="section-title" data-aos="fade-up">
-                    <h2>Contact</h2>
+                    <!-- <h2>Contact</h2> -->
                     <p>Contact Us</p>
                 </div>
 
