--- a/index.html
+++ b/index.html
@@ -486,6 +486,7 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
 
 </body>
 
