--- a/index.html
+++ b/index.html
@@ -380,11 +380,11 @@
                             <div class="form-group mt-3">
                                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                             </div>
-                            <!-- <div class="my-3"> -->
-                                <!-- <div class="loading">Loading</div> -->
-                                <!-- <div class="error-message"></div> -->
-                                <!-- <div class="sent-message">Your message has been sent. Thank you!</div> -->
-                            <!-- </div> -->
+                            <div class="my-3">
+                                <div class="loading">Loading</div>
+                                <div class="error-message"></div>
+                                <div class="sent-message">Your message has been sent. Thank you!</div>
+                            </div>
                             <div class="text-center"><button type="submit">Send Message</button></div>
                         </form>
 
@@ -482,12 +482,49 @@
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
 	<script>		
-		function fnSendContact(){try{var e=new XMLHttpRequest,t="https://api.brevo.com/v3/smtp/email",a=JSON.stringify({sender:{name:document.querySelector("form.php-email-form #name").value,email:document.querySelector("form.php-email-form #email").value},to:[{email:"btownpickndrop@gmail.com"}],subject:"From Website - "+document.querySelector("form.php-email-form #subject").value,htmlContent:document.querySelector('form.php-email-form [name="message"]').value});e.open("POST",t,!0),e.setRequestHeader("Content-type","application/json"),e.setRequestHeader("api-key","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"),e.onreadystatechange=function(){4==e.readyState&&(200==e.status||201==e.status)&&(document.querySelector("form.php-email-form #name").value="",document.querySelector("form.php-email-form #email").value="",document.querySelector("form.php-email-form #subject").value="",document.querySelector('form.php-email-form [name="message"]').value="",alert("Thanks for contacting us, our team will get back to you as soon as possible."))},e.send(a)}catch(o){console.log(o)}return!1}
+		<!-- function fnSendContact(){try{var e=new XMLHttpRequest,t="https://api.brevo.com/v3/smtp/email",a=JSON.stringify({sender:{name:document.querySelector("form.php-email-form #name").value,email:document.querySelector("form.php-email-form #email").value},to:[{email:"manilaj.16@gmail.com"}],subject:"From Website - "+document.querySelector("form.php-email-form #subject").value,htmlContent:document.querySelector('form.php-email-form [name="message"]').value});e.open("POST",t,!0),e.setRequestHeader("Content-type","application/json"),e.setRequestHeader("Access-Control-Allow-Origin","*"),e.setRequestHeader("Accept","application/json"),e.setRequestHeader("api-key","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	"),e.onreadystatechange=function(){4==e.readyState&&(200==e.status||201==e.status)&&(document.querySelector("form.php-email-form #name").value="",document.querySelector("form.php-email-form #email").value="",document.querySelector("form.php-email-form #subject").value="",document.querySelector('form.php-email-form [name="message"]').value="",alert("Thanks for contacting us, our team will get back to you as soon as possible."))},e.send(a)}catch(o){console.log(o)}return!1} -->
+		function fnSendContact(elem){
+			try {
+				var http = new XMLHttpRequest();
+				var url = 'https://api.brevo.com/v3/smtp/email';
+				var params = JSON.stringify({
+					'sender':{
+					  "name": document.querySelector('form.php-email-form #name').value,
+					  "email": document.querySelector('form.php-email-form #email').value
+					},
+				   "to":[{ "email":"manilaj.16@gmail.com","name":"Laundry service" }],
+				   "subject": 'From Website - ' + document.querySelector('form.php-email-form #subject').value,
+				   "htmlContent": document.querySelector('form.php-email-form [name="message"]').value
+				});
+				http.open('POST', url, true);
+
+				//Send the proper header information along with the request
+				http.setRequestHeader('Content-type', 'application/json');
+				http.setRequestHeader('api-key', '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');
+
+				http.onreadystatechange = function() {//Call a function when the state changes.
+					if(http.readyState == 4) {
+						if(http.status == 200 || http.status == 201){
+							document.querySelector("form.php-email-form #name").value = '';
+							document.querySelector("form.php-email-form #email").value = '';
+							document.querySelector("form.php-email-form #subject").value = '';
+							document.querySelector('form.php-email-form [name="message"]').value = '';
+							alert("Thanks for contacting us, our team will get back to you as soon as possible.");
+						}
+					}
+				}
+				http.send(params);
+			}
+			catch(ex){
+				console.log(ex);
+			}
+			return false;
+		}
 	</script>
 	<!-- <script src="https://smtpjs.com/v3/smtp.js"></script> -->
 
